tests/expected_output/uninitialized-array-element-if-fsanitize=address,memory/000000-clang-16.0-x86_64-pc-linux-gnu.txt

Runtime error: uninitialized variable accessed.

Execution stopped in main() in uninitialized-array-element-if.c at line 9:

int main(int argc, char **argv) {
    int a[100];
    a[42] = 42;
--> if (a[argc]) {
        a[43] = 43;
    }
}

Values when execution stopped:

a = {<uninitialized value> <repeats 42 times>, 42, <uninitialized value> <repeats 57 times>}
argc = 1
a[42] = 42
a[43] = <uninitialized value>
a[argc] = <uninitialized value>

